fix: Connect services with db, update Docker Compose and Rule Engine logic